[bdist_wheel]
universal = 1

[metadata]
name = docker-hub
version = attr: src.__version__
author = Amal Francis
author_email = amalfra@gmail.com
url = http://github.com/amalfra/docker-hub
description = Access docker hub from your terminal
long_description = file: README.md
long_description_content_type = text/markdown
keywords = docker, cli, docker-hub, client, tools
license = MIT
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3

[aliases]
test = pytest

[options]
include_package_data = True
;packages = find:
package_dir =
    =src
python_requires = >= 3.7
;install_requires =
;  requests ==2.28.0
;  tabulate ==0.8.10
;  python-dateutil ==2.8.2

;[options.entry_points]
;console_scripts =
;  docker-hub = src.__main__:main

[options.package_data]
* = README.md

[options.extras_require]
test =
    pytest
    pylint
    coverage
    coveralls
